--- a/_includes/components/header-and-footer/YearSelect/styles.scss
+++ b/_includes/components/header-and-footer/YearSelect/styles.scss
@@ -19,7 +19,8 @@ $years: 3;
   }
 }
 
-.YearSelect-content {    line-height: 1.1;
+.YearSelect-content {
+  line-height: 1.1;
   display: inline-block;
   vertical-align: middle;
   width: 100%;
@@ -111,7 +112,14 @@ $years: 3;
       border-top: 5px solid white;
       margin-left: 5px;
       position: relative;
-      top: 3px;
+      top: -9px;
+      transition: top 0.3s, transform 0.3s;
+      transform: rotate(0deg);
+    }
+
+    .YearSelect-bar.is-open &::after {
+      transform: rotate(180deg);
+      top: -15px;
     }
 
     @media screen and (min-width: $mobile-break) {
@@ -136,9 +144,23 @@ $years: 3;
   display: block;
   color: #4a4a4a;
   text-align: center;
+  overflow: hidden;
+
+  .YearSelect-item:first-child & {
+    border-radius: 0 15px 15px 0;
+  }
+
+  .YearSelect-item:last-child & {
+    border-radius: 15px;
+
+    @media screen and (min-width: $mobile-break) {
+      border-radius: 0 15px 15px 0;
+    }
+  }
 
   .YearSelect-item.is-active & {
     color: white;
+    display: inline-block;
     background-color: #ad3c64;
   }
 
